Don't show the selection widget for the first overview item if...

... the selection widget is already active or the filter string is empty.

Bug: 893384
Change-Id: I793e083991ef60361a4ca3056347a4023919b240
Reviewed-on: https://chromium-review.googlesource.com/c/1292713
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601346}
Former-commit-id: e5ab1b23536ec86f675c3c2987bb660af8c3ac0d